--- a/DevFreela.API/appsettings.json
+++ b/DevFreela.API/appsettings.json
@@ -12,5 +12,10 @@
   },
   "ConnectionStrings": {
     "DevFreelaCs": "Server=localhost\\SQLEXPRESS;Database=DevFreela;Trusted_Connection=True"
+  },
+  "Jwt": {
+    "Key": "Senha do abe incrivelmente grande para proteger de forma muito segura os tokens",
+    "Issuer": "DevFreela",
+    "Audience":  "ClienteFreelancers"
   }
 }
