Incluindo microserviço de pagamento ao monolito devfreela

--- a/DevFreela.API/appsettings.json
+++ b/DevFreela.API/appsettings.json
@@ -16,6 +16,9 @@
   "Jwt": {
     "Key": "Senha do abe incrivelmente grande para proteger de forma muito segura os tokens",
     "Issuer": "DevFreela",
-    "Audience":  "ClienteFreelancers"
+    "Audience": "ClienteFreelancers"
+  },
+  "Services": {
+    "Payments":  "https://localhost:6001"
   }
 }
